--- a/PubCrawlerClient/src/main/webapp/css/Test.css
+++ b/PubCrawlerClient/src/main/webapp/css/Test.css
@@ -1,5 +1,14 @@
+.header {
+	background-color: black;
+	opacity: 70%;  
+	 position: relative;
+  width: 102%;
+  margin-top: -2%;   
+}
+
 .headerLogo {
-		position: Absolute;  
+		  height: 125px;
+  width: 125px;
 	float: left; 
 }
 .TestTitle {
@@ -67,7 +76,7 @@ body {
 .NavigationMenu {
 	position: relative; 
 	top: -25px; 
-	left: 75px; 
+	left: 75px;  
 	
 }
 .NavigationMenu li {
